--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
@@ -43,6 +44,7 @@
     "typescript": "~4.3.5",
     "typesync": "^0.8.0"
   },
+  "homepage": "https://chunlaw.github.io/react-table-example",
   "resolutions": {},
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -50,6 +52,8 @@
     "eject": "react-scripts eject",
     "format": "prettier --no-color --loglevel warn --write 'src/**/*.{js,jsx,ts,tsx,json}'",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
